custom/manifests/samba.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-server
  namespace: kube-system
  labels:
    k8s-app: samba-server
    kubernetes.io/name: "Samba-Server"
spec:
  selector:
    matchLabels:
      k8s-app: samba-server
  template:
    metadata:
      labels:
        k8s-app: samba-server
    spec:
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: samba-server
          image: "%{SYSTEM_DEFAULT_REGISTRY}%rancher/samba-server:v0.5"
          volumeMounts:
            - name: data
              mountPath: /share
            - name: config
              mountPath: /etc/samba
          securityContext:
            privileged: true
      volumes:
        - name: data
          hostPath:
            path: /opt/k3s/share
            type: DirectoryOrCreate
        - name: config
          configMap:
            name: samba-config
