custom/manifests/v2ray.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2ray
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: v2ray
  template:
    metadata:
      labels:
        name: v2ray
    spec:
      hostNetwork: true
      containers:
        - name: v2ray
          image: "%{SYSTEM_DEFAULT_REGISTRY}%rancher/v2fly-core:v5.16.1"
          args: ["run","-c","/config/config.json"]
          volumeMounts:
            - name: config-volume
              mountPath: /config/
      volumes:
        - name: config-volume
          configMap:
            name: v2ray-config
